Move api keys to .env

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+# Add this line to your .gitignore
+.env
